--- a/src/native/button/dzButton.wxss
+++ b/src/native/button/dzButton.wxss
@@ -27,6 +27,8 @@
 
 .dz-button {
     position: relative;
+    width: 100%;
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,6 +45,7 @@
     outline: 0;
     transition: all .2s cubic-bezier(.4, 0, .2, 1);
     will-change: box-shadow;
+    background-color: #0554BB;
 }
 
 .dz-button::after {
