--- a/src/native/paper/dzPaper.wxss
+++ b/src/native/paper/dzPaper.wxss
@@ -26,7 +26,9 @@
 }
 
 .dz-paper {
-    position: relative;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     z-index: 9;
     margin: 0;
     padding: 0;
@@ -39,6 +41,11 @@
     touch-action: manipulation;
     user-select: none;
     transition: all .2s cubic-bezier(.4, 0, .2, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    font-weight: bold;
 }
 
 .dz-paper::after {
