--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -13,8 +13,13 @@
 
     .flow-item {
         position: relative;
-        background-color: red;
         width: 100%;
         height: 100%;
+        background-image: url("http://39.106.4.226:9000/wechat/home_back_2.jpg");
+        background-repeat: no-repeat;
+        background-size: 200% auto;
+        color: white;
+        font-size: 36px;
+        font-weight: bold;
     }
 }
