--- a/src/assets/style/components.scss
+++ b/src/assets/style/components.scss
@@ -266,4 +266,180 @@
     }
 }
 
+.dz-load-box {
+    position: relative;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    .text {
+        position: relative;
+        font-size: 28px;
+        box-sizing: border-box;
+        height: 60px;
+        line-height: 60px;
+        color: #bbbbbb;
+
+        &::before {
+            content: " ";
+            position: absolute;
+            left: -160px;
+            top: 30px;
+            width: 240px;
+            border-bottom: 1px solid #bbbbbb;
+            transform: scale(.5);
+            transform-origin: 0 0;
+        }
+
+        &::after {
+            content: " ";
+            position: absolute;
+            right: -280px;
+            top: 30px;
+            width: 240px;
+            border-bottom: 1px solid #bbbbbb;
+            transform: scale(.5);
+            transform-origin: 0 0;
+        }
+    }
+}
+
+/*活动卡片===begin*/
+.dz-act-card {
+    margin-top: 30px;
+    position: relative;
+    border-radius: 20px;
+    background-color: white;
+    overflow: hidden;
+
+    .card-op {
+        position: absolute;
+        color: #aaaaaa;
+        bottom: 10px;
+        width: 86px;
+        height: 60px;
+        line-height: 60px;
+        font-size: 24px;
+
+        &::before {
+            content: " ";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: 10;
+        }
+    }
+
+    .card-click:active {
+        color: #353535;
+    }
+
+    .eye {
+        right: 103px;
+        text-align: right;
+        padding-right: 35px;
+        box-sizing: border-box;
+
+        &::after {
+            content: " ";
+            position: absolute;
+            top: 17px;
+            right: 0;
+            width: 30px;
+            height: 30px;
+            background-size: contain;
+            background-position: top;
+            background-repeat: no-repeat;
+            background-image: url("../../assets/icon/eye.png");
+        }
+    }
+
+    .good {
+        right: 17px;
+        text-align: right;
+        padding-right: 31px;
+        box-sizing: border-box;
+
+        &::after {
+            content: " ";
+            position: absolute;
+            top: 13px;
+            right: 0;
+            width: 30px;
+            height: 30px;
+            background-size: contain;
+            background-position: top;
+            background-repeat: no-repeat;
+            background-image: url("../../assets/icon/good.png");
+        }
+    }
+
+    .card {
+        margin-bottom: 70px;
+
+        &::after {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 182px;
+            height: 46px;
+            line-height: 46px;
+            font-size: 24px;
+            padding-left: 38px;
+            color: #555555;
+            box-sizing: border-box;
+            background-size: cover;
+            background-position: top;
+            background-repeat: no-repeat;
+            border-bottom-left-radius: 20px;
+        }
+
+        .card-img {
+            position: relative;
+
+            .tag {
+                position: absolute;
+                top: 0;
+                right: 0;
+                height: 50px;
+                background-color: #0554BB;
+                min-width: 120px;
+                font-size: 28px;
+                text-align: center;
+                line-height: 50px;
+                color: white;
+                border-bottom-left-radius: 12px;
+                padding: 0 8px;
+            }
+
+            image {
+                height: 300px;
+                width: 100%;
+            }
+        }
+    }
+
+    .title {
+        padding: 17px;
+        color: #353535;
+        max-height: 98px;
+        box-sizing: border-box;
+        word-break: break-word;
+        word-wrap: break-word;
+        white-space: normal;
+        overflow: hidden;
+    }
+
+    .time {
+        position: absolute;
+        left: 17px;
+        bottom: 10px;
+        color: #aaaaaa;
+        font-size: 28px;
+        height: 60px;
+        line-height: 60px;
+    }
+}
+
+/*活动卡片===end*/
