--- a/src/native/box/dzBox.wxss
+++ b/src/native/box/dzBox.wxss
@@ -25,9 +25,11 @@
     animation-fill-mode: forwards;
 }
 
-.dz-paper {
-    position: relative;
-    z-index: 9;
+.dz-box {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 6;
     margin: 0;
     padding: 0;
     line-height: normal;
@@ -39,9 +41,12 @@
     touch-action: manipulation;
     user-select: none;
     transition: all .2s cubic-bezier(.4, 0, .2, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.dz-paper::after {
+.dz-box::after {
     content: " ";
     position: absolute;
     top: 0;
@@ -49,21 +54,6 @@
     right: 0;
     bottom: 0;
     z-index: 10;
-}
-
-.dz-paper-border {
-    border-radius: 12px;
-}
-
-.dz-paper-border::after {
-    z-index: 95;
-    box-sizing: border-box;
-    width: 200%;
-    height: 200%;
-    border: 1px solid #e5e5e5;
-    transform: scale(.5);
-    transform-origin: 0 0;
-    border-radius: 24px;
 }
 
 .dz-ripple {
