--- a/src/pages/entrance/entrance.scss
+++ b/src/pages/entrance/entrance.scss
@@ -7,6 +7,11 @@
         background-color: #f5f5f5;
     }
 
+    .tips-line {
+        padding: 8px 0;
+        color: #0554BB;
+    }
+
     .modal-line {
         display: flex;
         padding: 5px;
