--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -9,17 +9,54 @@
         min-width: 50%;
         box-sizing: border-box;
         padding: 5px;
+        transform: translateY(120px);
+        opacity: 0;
     }
 
     .flow-item {
         position: relative;
         width: 100%;
         height: 100%;
-        background-image: url("http://39.106.4.226:9000/wechat/home_back_2.jpg");
+        background-image: url("https://lingpaobasketball.com/file/x0wechat/home_back.jpg");
         background-repeat: no-repeat;
         background-size: 200% auto;
         color: white;
         font-size: 36px;
         font-weight: bold;
+    }
+}
+
+.row-slideUp1 {
+    animation: slideUp 0.4s ease-out;
+    animation-delay: 0.3s;
+    animation-fill-mode: forwards;
+}
+
+.row-slideUp2 {
+    animation: slideUp 0.4s ease-out;
+    animation-delay: 0.4s;
+    animation-fill-mode: forwards;
+}
+
+.row-slideUp3 {
+    animation: slideUp 0.4s ease-out;
+    animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.row-slideUp4 {
+    animation: slideUp 0.4s ease-out;
+    animation-delay: 0.6s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(120px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
     }
 }
