页面样式和订场若干bug

--- a/src/pages/mine/mine.scss
+++ b/src/pages/mine/mine.scss
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1PX solid #dddddd;
+    border: 1PX solid white;
     border-radius: 36px;
 
     .name {
