--- a/src/pages/entrance/entrance.scss
+++ b/src/pages/entrance/entrance.scss
@@ -9,7 +9,7 @@
 
     .tips-line {
         padding: 8px 0;
-        color: #0554BB;
+        color: #E50014;
     }
 
     .modal-line {
@@ -29,13 +29,13 @@
     }
 
     .submit-btn {
-        color: #0554BB;
+        color: #E50014;
     }
 }
 
 .entrance-head {
     padding: 60px 70px 70px 70px;
-    background-color: #0554BB;
+    background-color: #E50014;
 }
 
 .dz-steps {
@@ -94,7 +94,7 @@
         text {
             background-color: #ffdc35;
             border: 1PX solid #ffdc35;
-            color: #0554BB;
+            color: #E50014;
         }
 
         .tx {
@@ -123,17 +123,17 @@
 
             .origin {
                 &:after {
-                    border-bottom: 2PX solid #0554BB;
+                    border-bottom: 2PX solid #E50014;
                 }
             }
 
             .promotion {
-                color: #0554BB;
+                color: #E50014;
             }
         }
 
         .card-right {
-            background-color: #0554BB;
+            background-color: #E50014;
         }
     }
 
