--- a/src/pages/join/join.scss
+++ b/src/pages/join/join.scss
@@ -1,5 +1,5 @@
 .scan-header {
-    background-color: #0554BB;
+    background-color: #E50014;
     position: relative;
     height: 300px;
     display: flex;
@@ -43,7 +43,7 @@
     .tips {
         height: 80px;
         line-height: 80px;
-        color: #0554BB;
+        color: #E50014;
         text-align: center;
     }
 
