--- a/src/pages/mine/balance/balance.scss
+++ b/src/pages/mine/balance/balance.scss
@@ -1,5 +1,5 @@
 .balance-detail {
-    background-color: #0554BB;
+    background-color: #E50014;
 
     .amount {
         display: flex;
@@ -51,7 +51,7 @@
         }
 
         &:active {
-            color: #0554BB;
+            color: #E50014;
         }
 
         .at-icon-chevron-right {
