--- a/src/pages/mine/mine.scss
+++ b/src/pages/mine/mine.scss
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     height: 660px;
-    background-image: linear-gradient(to top right, #1cbbb4, #0554BB);
+    background-image: linear-gradient(to top right, #9C4824, #E50014);
 }
 
 .dz-member-card {
@@ -58,7 +58,7 @@
         }
 
         &:active {
-            color: #0554BB;
+            color: #E50014;
         }
 
         .at-icon-chevron-right {
