--- a/src/pages/screen/screen.scss
+++ b/src/pages/screen/screen.scss
@@ -9,7 +9,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #0554BB;
+    background-color: #E50014;
     display: flex;
     justify-content: center;
     align-items: center;
