--- a/src/assets/style/components.scss
+++ b/src/assets/style/components.scss
@@ -403,7 +403,7 @@
                 top: 0;
                 right: 0;
                 height: 50px;
-                background-color: #0554BB;
+                background-color: #E50014;
                 min-width: 120px;
                 font-size: 28px;
                 text-align: center;
