--- a/src/assets/style/widget.scss
+++ b/src/assets/style/widget.scss
@@ -40,7 +40,7 @@
 
     .summary {
         padding: 0 0 10px 20px;
-        color: #0554BB;
+        color: #E50014;
     }
 
     .item {
@@ -106,7 +106,7 @@
                 width: 160px;
                 max-width: 160px;
                 min-width: 160px;
-                color: #0554BB;
+                color: #E50014;
             }
 
             .body {
