--- a/src/native/button/dzButton.wxss
+++ b/src/native/button/dzButton.wxss
@@ -45,7 +45,7 @@
     outline: 0;
     transition: all .2s cubic-bezier(.4, 0, .2, 1);
     will-change: box-shadow;
-    background-color: #0554BB;
+    background-color: #E50014;
 }
 
 .dz-button::after {
