修改获取用户信息接口

--- a/src/native/slide/dzSlide.wxml
+++ b/src/native/slide/dzSlide.wxml
@@ -15,4 +15,4 @@
         </view>
     </swiper-item>
 </swiper>
-<image class="slide-back" src="https://lingpaobasketball.com/file/wechat/slide_bg.png" mode="scaleToFill"/>
+<image class="slide-back" src="https://lanqiuguanli.com/file/common/slide_bg.png" mode="scaleToFill"/>
