--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -17,7 +17,7 @@
         position: relative;
         width: 100%;
         height: 100%;
-        background-image: url("https://lingpaobasketball.com/file/x0wechat/home_back.jpg");
+        background-image: url("https://lanqiuguanli.com/file/x0wechat/home_back.jpg");
         background-repeat: no-repeat;
         background-size: 200% auto;
         color: white;
